correção de bug ao comentar - melhorias no sistema de comentarios

--- a/Meusite/static/css/home.css
+++ b/Meusite/static/css/home.css
@@ -1,64 +1,10 @@
 body {
-    font-family: Helvetica;
     background-color:rgb(144, 224, 238);
     padding: 0; 
     margin: 0;
 }
 
-/* Barra de Navegação */
-nav {
-    height: 60px;
-    display: flex;
-    justify-content: space-around;
-    background-color: #ff8800;
-    align-items: center;
-}
 
-nav ul {
-    display: flex; 
-    list-style: none;
-}
-
-nav ul li a{
-    margin-right: 10px;
-    text-decoration: none;
-    color: white;
-}
-
-nav h2 a {
-    text-decoration: none;
-    color: white;
-}
-
-.divBusca{
-    background-color:#E0EEEE;
-    border:solid 2px #5F9EA0;
-    border-radius:10px;
-    width:300px;
-    height:32px;
-  }
-  
-  #txtBusca{
-    float:left;
-    background-color:transparent;
-    padding-left:5px;
-    font-size:18px;
-    border:none;
-    height:32px;
-    width:191px;
-  }
-  
-  #btnBusca{
-    border:none;
-    float:left;
-    height:32px;
-    border-radius:0 7px 7px 0;
-    width:102px;
-    font-weight:bold;
-    background:#5F9EA0;
-  }
-
-/* Barra de informação */
 .informacao {
     text-align: center;
     color: white;
@@ -69,12 +15,15 @@ nav h2 a {
 
 /* Post */
 .container {
+    display: flex;
+    flex-direction: column;
     width: 1000px;
     margin-top: 50px;
     margin-left: 120px;
     padding: 20px;
     box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.2);
     background-color: white;
+    float: left;
 }
 
 .container button {
@@ -112,13 +61,16 @@ nav h2 a {
 
 /* Sobre */
 .Sobre {
-    margin-top: -550px;
-    margin-left: 1350px;
+    display: flex;
+    margin-top: 50px;
+    margin-left: 1300px;
     width: 500px;
+    
 }
 
 .card-header {  
-    background-color: rgb(165, 162, 170);
+    background-color: #ff8800;
+    color: white;
     padding: 5px;
     text-align: center;
     box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.2);
@@ -127,7 +79,7 @@ nav h2 a {
 .card-body {
     text-align: left;
     padding: 5px;
-    margin-top: -21px;
+
     background-color: white;
     border: solid 1px white;
     box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.2);
