--- a/Meusite/templates/home.html
+++ b/Meusite/templates/home.html
@@ -6,22 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="stylesheet" href="{% static 'ebac/home.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}"> 
 </head>
+
 <body>
-    
     <!--Barra de Navegação-->
-    <nav>
-        <h2><a href="#">Pagina inicial</a></h2>
-        <div class="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..."/>
-            <button id="btnBusca">Buscar</button>
-          </div>
-        <ul>
-            <li><strong><a href='#'>Home</a></li></strong>
-            <li><strong><a href='#'>Politica</a></li></strong>
-            <li><strong><a href='#'>Contato</a></li></strong>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">FK Ocean</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Politica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contato</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
     </nav>
 
     <!--Barra de informação-->
@@ -32,21 +47,20 @@
 
     <!--Posts-->
     {% for p in post %}
-        <div class="container">
-            <h1>{{p.titulo}}</h1>
-            <p>{{p.autor}} | {{p.criado_em}}</p><h3>{{p.slug}}</h3>
-            <a href="{% url 'post' p.id %}"><button>Ler mais</button></a>
-
-        </div>
+      <div class="container">
+        <h1>{{p.titulo}}</h1>
+        <p>{{p.autor}} | {{p.criado_em}}</p><h3>{{p.slug}}</h3>
+        <a href="{% url 'post' p.id %}"><button>Ler mais</button></a>
+      </div>
     {% endfor %}
 
     <!--Sobre-->
     <div class="Sobre">
-        <h1 class="card-header">Sobre</h1>
+        <h2 class="card-header">Sobre</h2>
         <div class="card-body">
-            <p>Sou um blog super interessante, busco te fornecer a informação que procura,
-            ainda estou em desenvolvimento então peço que tenha paciencia comigo.</p>
-            <a href="#"><button>Saiba mais!</button></a>
+          <p>Sou um blog super interessante, busco te fornecer a informação que procura,
+          ainda estou em desenvolvimento então peço que tenha paciencia comigo.</p>
+          <a href="#"><button>Saiba mais!</button></a>
         </div>
     </div>
 
