--- a/Meusite/templates/post.html
+++ b/Meusite/templates/post.html
@@ -6,65 +6,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="stylesheet" href="{% static 'ebac/post.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/post.css' %}">
 </head>
+
 <body>
+  <!--Barra de Navegação-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">FK Ocean</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Politica</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contato</a>
+                </li>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+        </div>
+  </nav>
     
-    <!--Barra de Navegação-->
-    <nav>
-        <h2><a href="#">Pagina inicial</a></h2>
-        <div class="divBusca">
-            <input type="text" id="txtBusca" placeholder="Buscar..."/>
-            <button id="btnBusca">Buscar</button>
-          </div>
-        <ul>
-            <li><strong><a href='#'>Home</a></li></strong>
-            <li><strong><a href='#'>Politica</a></li></strong>
-            <li><strong><a href='#'>Contato</a></li></strong>
-        </ul>
-    </nav>
+  <!--Post-->
+  <div class="Container">
+    <h1>{{post.titulo}}</h1>
+    <p>{{post.autor}} | {{post.criado_em}}</p><h3>{{post.slug}}</h3>
+    <p>{{post.conteudo}}</p>
+  </div>
 
-    <!--Post-->
-        <div class="container">
-            <h1>{{post.titulo}}</h1>
-            <p>{{post.autor}} | {{post.criado_em}}</p><h3>{{post.slug}}</h3>
-        </div>
+  <!--Sobre-->
+  <div class="Sobre">
+    <h2 class="card-header">Sobre</h2>
+      <div class="card-body">
+        <p>Sou um blog super interessante, busco te fornecer a informação que procura,
+        ainda estou em desenvolvimento então peço que tenha paciencia comigo.</p>
+        <a href="#"><button>Saiba mais!</button></a>
+      </div>
+  </div>
 
-    <!--Sobre-->
-    <div class="Sobre">
-        <h1 class="card-header">Sobre</h1>
-        <div class="card-body">
-            <p>Sou um blog super interessante, busco te fornecer a informação que procura,
-            ainda estou em desenvolvimento então peço que tenha paciencia comigo.</p>
-            <a href="#"><button>Saiba mais!</button></a>
-        </div>
-    </div>
+  <!--Comentarios-->
+  <div class="Comentarios_quantidade">
+    {% if comentarios.count %}
+      <h1>{{total_comentarios}} comentarios</h1>
+    {% else %}
+      <strong><h3>Sem comentarios</h3></strong>
+    {% endif %} 
+    {% for comentario in comentarios %}
+      <strong><p>{{comentario.nome}}</strong> - {{comentario.criado_em}}</p>
+      <p>{{comentario.conteudo}}</p>
+    {% endfor %}
+  </div>
 
-    <!--Comentarios-->
-    <div class="Comentarios_quantidade">
-        {% with comentarios.count as total_comentarios %}
-            <h1>{{ total_comentarios }} comentarios</h1>
-        {% endwith %} 
-        {% for comentario in comentarios %}
-            <strong><p>{{comentario.nome}}</strong> - {{comentario.criado_em}}</p>
-            <p>{{comentario.conteudo}}</p>
-        {% endfor %}
-    </div>
-
-    <br>
-    <!--Comentar-->
-    <div class="Comentar">
+  <!--Comentar-->
+  <br>
+  <div class="Comentar">
     <h1>Comentar</h1>
-        <form method="post" style="margin-top: 1.3em;">
-            {{ comentario_form.as_p }}
-            {% csrf_token %}
-            <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
-        </form>
-    </div>
+      <form method="post" style="margin-top: 1.3em;">
+        {{comentario_form.as_p}}
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary  btn-lg">comentar</button>
+      </form>
+  </div>
 
-    <!--Rodape-->
-    <footer class="Rodape">
-        &copy; Todos os direitos reservados a Fabio Kauan 
-    </footer>
+  <!--Rodape-->
+  <footer class="Rodape">
+    &copy; Todos os direitos reservados a Fabio Kauan 
+  </footer>
 
 </body>
